# pure-fun

./: .editorconfig  .ocamlformat  ACKNOWLEDGMENTS  ACKNOWLEDGMENTS.md  CHANGELOG.md  CHANGES.md  CHANGES.txt  Changelog  README-Okasaki.md  README.md  README.okasaki  README.txt  VERSION  _config.yml  chp2.ml  chp3.ml  chp4.ml  chp5.ml  chp6.ml  chp7.ml  chp8.ml  chp9.ml  index.html  index.md  params.json  pure-fun.opam
.github/: dependabot.yml
pkg/: pkg.ml
