opam-version: "1.2"
maintainer: "Markus Mottl <markus.mottl@gmail.com>"
authors: [
  "Chris Okasaki <cdo@cs.columbia.edu>"
  "Markus Mottl <markus.mottl@gmail.com>"
]
license: "Apache-2.0"
homepage: "https://mmottl.github.io/pure-fun"
dev-repo: "https://github.com/mmottl/pure-fun.git"
bug-reports: "https://github.com/mmottl/pure-fun/issues"
