opam-version: "2.0"
maintainer: "Markus Mottl <markus.mottl@gmail.com>"
authors: [
  "Chris Okasaki <cdo@cs.columbia.edu>"
  "Markus Mottl <markus.mottl@gmail.com>"
]
license: "Apache-2.0"
homepage: "https://mmottl.github.io/pure-fun"
doc: "https://mmottl.github.io/pure-fun/api"
dev-repo: "git+https://github.com/mmottl/pure-fun.git"
bug-reports: "https://github.com/mmottl/pure-fun/issues"

synopsis: "Okasaki's Purely Functional Data Structures"

description: """
OCaml translation of the SML examples in Okasaki's book on Purely Functional
Data Structures."""
